--- a/notebooks/quantile_lgbm.ipynb
+++ b/notebooks/quantile_lgbm.ipynb
@@ -1797,287 +1797,8 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Patient</th>\n",
-       "      <th>Weeks</th>\n",
-       "      <th>FVC</th>\n",
-       "      <th>Percent</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>SmokingStatus</th>\n",
-       "      <th>Source</th>\n",
-       "      <th>Confidence</th>\n",
-       "      <th>Patient_Week</th>\n",
-       "      <th>min_week</th>\n",
-       "      <th>baselined_week</th>\n",
-       "      <th>base_FVC</th>\n",
-       "      <th>fold</th>\n",
-       "      <th>kfold</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>ID00007637202177411956430</td>\n",
-       "      <td>-4</td>\n",
-       "      <td>2315</td>\n",
-       "      <td>58.253649</td>\n",
-       "      <td>79</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Ex-smoker</td>\n",
-       "      <td>train</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2315</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>ID00007637202177411956430</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2214</td>\n",
-       "      <td>55.712129</td>\n",
-       "      <td>79</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Ex-smoker</td>\n",
-       "      <td>train</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-4</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2315</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>ID00007637202177411956430</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2061</td>\n",
-       "      <td>51.862104</td>\n",
-       "      <td>79</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Ex-smoker</td>\n",
-       "      <td>train</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-4</td>\n",
-       "      <td>11</td>\n",
-       "      <td>2315</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>ID00007637202177411956430</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2144</td>\n",
-       "      <td>53.950679</td>\n",
-       "      <td>79</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Ex-smoker</td>\n",
-       "      <td>train</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-4</td>\n",
-       "      <td>13</td>\n",
-       "      <td>2315</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>ID00007637202177411956430</td>\n",
-       "      <td>11</td>\n",
-       "      <td>2069</td>\n",
-       "      <td>52.063412</td>\n",
-       "      <td>79</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Ex-smoker</td>\n",
-       "      <td>train</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-4</td>\n",
-       "      <td>15</td>\n",
-       "      <td>2315</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1544</th>\n",
-       "      <td>ID00426637202313170790466</td>\n",
-       "      <td>13</td>\n",
-       "      <td>2712</td>\n",
-       "      <td>66.594637</td>\n",
-       "      <td>73</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Never smoked</td>\n",
-       "      <td>train</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-12</td>\n",
-       "      <td>25</td>\n",
-       "      <td>2925</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1545</th>\n",
-       "      <td>ID00426637202313170790466</td>\n",
-       "      <td>19</td>\n",
-       "      <td>2978</td>\n",
-       "      <td>73.126412</td>\n",
-       "      <td>73</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Never smoked</td>\n",
-       "      <td>train</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-12</td>\n",
-       "      <td>31</td>\n",
-       "      <td>2925</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1546</th>\n",
-       "      <td>ID00426637202313170790466</td>\n",
-       "      <td>31</td>\n",
-       "      <td>2908</td>\n",
-       "      <td>71.407524</td>\n",
-       "      <td>73</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Never smoked</td>\n",
-       "      <td>train</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-12</td>\n",
-       "      <td>43</td>\n",
-       "      <td>2925</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1547</th>\n",
-       "      <td>ID00426637202313170790466</td>\n",
-       "      <td>43</td>\n",
-       "      <td>2975</td>\n",
-       "      <td>73.052745</td>\n",
-       "      <td>73</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Never smoked</td>\n",
-       "      <td>train</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-12</td>\n",
-       "      <td>55</td>\n",
-       "      <td>2925</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1548</th>\n",
-       "      <td>ID00426637202313170790466</td>\n",
-       "      <td>59</td>\n",
-       "      <td>2774</td>\n",
-       "      <td>68.117081</td>\n",
-       "      <td>73</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Never smoked</td>\n",
-       "      <td>train</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-12</td>\n",
-       "      <td>71</td>\n",
-       "      <td>2925</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1549 rows × 15 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                        Patient  Weeks   FVC    Percent  Age   Sex  \\\n",
-       "0     ID00007637202177411956430     -4  2315  58.253649   79  Male   \n",
-       "1     ID00007637202177411956430      5  2214  55.712129   79  Male   \n",
-       "2     ID00007637202177411956430      7  2061  51.862104   79  Male   \n",
-       "3     ID00007637202177411956430      9  2144  53.950679   79  Male   \n",
-       "4     ID00007637202177411956430     11  2069  52.063412   79  Male   \n",
-       "...                         ...    ...   ...        ...  ...   ...   \n",
-       "1544  ID00426637202313170790466     13  2712  66.594637   73  Male   \n",
-       "1545  ID00426637202313170790466     19  2978  73.126412   73  Male   \n",
-       "1546  ID00426637202313170790466     31  2908  71.407524   73  Male   \n",
-       "1547  ID00426637202313170790466     43  2975  73.052745   73  Male   \n",
-       "1548  ID00426637202313170790466     59  2774  68.117081   73  Male   \n",
-       "\n",
-       "     SmokingStatus Source  Confidence Patient_Week  min_week  baselined_week  \\\n",
-       "0        Ex-smoker  train         NaN          NaN        -4               0   \n",
-       "1        Ex-smoker  train         NaN          NaN        -4               9   \n",
-       "2        Ex-smoker  train         NaN          NaN        -4              11   \n",
-       "3        Ex-smoker  train         NaN          NaN        -4              13   \n",
-       "4        Ex-smoker  train         NaN          NaN        -4              15   \n",
-       "...            ...    ...         ...          ...       ...             ...   \n",
-       "1544  Never smoked  train         NaN          NaN       -12              25   \n",
-       "1545  Never smoked  train         NaN          NaN       -12              31   \n",
-       "1546  Never smoked  train         NaN          NaN       -12              43   \n",
-       "1547  Never smoked  train         NaN          NaN       -12              55   \n",
-       "1548  Never smoked  train         NaN          NaN       -12              71   \n",
-       "\n",
-       "      base_FVC  fold  kfold  \n",
-       "0         2315   1.0      1  \n",
-       "1         2315   1.0      1  \n",
-       "2         2315   1.0      1  \n",
-       "3         2315   1.0      1  \n",
-       "4         2315   1.0      1  \n",
-       "...        ...   ...    ...  \n",
-       "1544      2925   1.0      1  \n",
-       "1545      2925   1.0      1  \n",
-       "1546      2925   1.0      1  \n",
-       "1547      2925   1.0      1  \n",
-       "1548      2925   1.0      1  \n",
-       "\n",
-       "[1549 rows x 15 columns]"
+       "176"
       ]
      },
      "execution_count": 17,
@@ -2086,7 +1807,7 @@
     }
    ],
    "source": [
-    "df_train"
+    "df_train.Patient.nunique()"
    ]
   },
   {
